product type: associations with product completed
